syntax = "proto3";

package kotlinx.rpc.grpc.test;

option optimize_for = LITE_RUNTIME;

message PrimitiveTest {
  double double = 1;
  float float = 2;
  int32 int32 = 3;
  int64 int64 = 4;
  uint32 uint32 = 5;
  uint64 uint64 = 6;
  sint32 sint32 = 7;
  sint64 sint64 = 8;
  fixed32 fixed32 = 9;
  fixed64 fixed64 = 10;
  sfixed32 sfixed32 = 11;
  sfixed64 sfixed64 = 12;
  bool bool = 13;
  string string = 14;
  bytes bytes = 15;
  optional double doubleOpt = 111;
  optional float floatOpt = 112;
  optional int32 int32Opt = 113;
  optional int64 int64Opt = 114;
  optional uint32 uint32Opt = 115;
  optional uint64 uint64Opt = 116;
  optional sint32 sint32Opt = 117;
  optional sint64 sint64Opt = 118;
  optional fixed32 fixed32Opt = 119;
  optional fixed64 fixed64Opt = 1110;
  optional sfixed32 sfixed32Opt = 1111;
  optional sfixed64 sfixed64Opt = 1112;
  optional bool boolOpt = 1113;
  optional string stringOpt = 1114;
  optional bytes bytesOpt = 1115;
}

